--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^12.3.0",
     "framer-motion": "^11.3.12",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
